assets/css/styles.css
/*In this CSS file are all the styles for the website FABFOREVER.
The method used here is the top-down method which goes through the styles
from the parents to the children in this manner: 
[ROOT -> HTML -> BODY -> SECTION -> CONTAINER -> COLUMN -> HEADING -> TEXT -> BUTTON, IMAGE ETC.]*/

/*CSSRoots is used for declaring the website colors as global variables.
Declare them once and then use the variable name as value within the CSS.*/
:root {
    --color-primary: #BC00FF;
    --color-secondary: #1100FF;
    --color-accent: #CF49FF;
    --color-dark: #000000;
    --color-light: #ffffff;
    --color-shadow: rgba(0, 0, 0, 0.25);
}

/*The following sets all elements in the DOM to have no padding, no margin and the box-sizing.
This includes the ::before and ::after pseudo-elements*/
*,
*::before,
*::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

/*Here we set the HTML scroll behaviour to smooth scroll and the font size to 62.5% = 10px,
this allows for easier calculations regarding the font size, paddings and margins*/
html {
    scroll-behavior: smooth;
    font-size: 62.5%;
}

/*For the body we need to set the font size back to the default 16px - its the standard ssetting after all.
But we can still calculate all other values based on the 62.5% we set earlier.*/
body {
    font-size: 1.6rem;
    overflow-x: hidden;
    /*disables horizontal scrolling*/
    display: flex;
    flex-direction: column;
    width: 100%;
}

/*Global styles for elements that are the same over the complete website.
Elements are: Sections, Containers, Columns, Rows, Headings and Text*/

/*SECTION STYLES*/

/*Creates a section which fills the complete viewport in x and y*/
.section-full {
    width: 100vw;
    min-height: 100vh;
}

/*Creates a section which fills the complete width in x and half width y*/
.section-half {
    width: 100vw;
    min-height: 50vh;
}

/*SECTION BACKGROUNDS - Some of them are also used on links (styled as buttons) and buttons
but primrily they belong to sections.*/

.background {
    background: var(--color-secondary);
    background: linear-gradient(43deg, var(--color-secondary) 0%, var(--color-primary) 95%);
}

.background-reverse {
    background: var(--color-primary);
    background: linear-gradient(43deg, var(--color-primary) 0%, var(--color-secondary) 95%);
}

.background-mask {
    background: var(--color-light);
    background:
        linear-gradient(30deg, var(--color-light) 65%, rgba(17, 0, 255, 0) 65%),
        linear-gradient(43deg, var(--color-secondary) 0%, var(--color-primary) 95%);
}

/*CONTAINER STYLES*/

/*Creates a container element which is 1200px wide (1920px * 0.625 = 1200px)*/
.container {
    width: 62.5%;
}

/*COLUMN STYLES*/

/*This generates a column half the width of its parent (usually the container)*/
.column-2 {
    width: 50%;
}

/*This generates a column quarter the width of its parent*/
.column-4 {
    width: 25%;
}

/*HEADING STYLES*/
h1 {
    font-family: montserrat, sans-serif;
    font-size: 5rem;
    font-weight: 400;
}

h2 {
    font-family: montserrat, sans-serif;
    font-size: 3.5rem;
    font-weight: 400;
}

h3 {
    font-family: montserrat, sans-serif;
    font-size: 2rem;
}

/*TEXT STYLES*/
p {
    font-family: Poppins, sans-serif;
    font-size: 1.6rem;
    font-weight: 400;
}

/*some text parts need to be very bold, so we set them here*/
span {
    font-weight: 800;
}

/*the default text color is black, but we also need some white text on the page*/
.text-white {
    color: var(--color-light);
}

.text-shadow {
    text-shadow: 3px 3px 5px var(--color-shadow);
}

.text-center {
    text-align: center;
}

/*BUTTON STYLES AND STYLES FOR LINKS (<a>-tags) WHICH ARE STYLED AS BUTTONS*/
.button-wrapper {
    margin-top: 3rem;
}

.button {
    width: 14.5rem;
    height: 4rem;
    padding: 12px 16px;
    text-decoration: none;
    border: none;
    border-radius: 0.5rem;
    background-color: var(--color-primary);
    color: var(--color-light);
    font-family: montserrat, sans-serif;
    font-size: 1.6rem;
    font-weight: 600;
}

/*UTILITY CLASSES FOR USE PRIMARILY WITH FLEXBOX*/
.flex {
    display: flex;
}

.flex-start {
    justify-content: start;
}

.flex-center {
    justify-content: center;
    align-items: center;
}

.flex-between {
    justify-content: space-between;
}

.flex-end {
    justify-content: end;
}

.flex-center--x {
    justify-content: center;
}

.flex-center--y {
    align-items: center;
}

.flex-column {
    flex-direction: column;
}

.flex-column--reverse {
    flex-direction: column-reverse;
}

.flex-row {
    flex-direction: row;
}

/*BOX SHADOWS AND CORNERS - they can go on any container, image or column elements*/
.box-shadow {
    box-shadow: 3px 3px 5px var(--color-shadow);
}

.rounded {
    border-radius: 0.5rem;
}

/*GENERAL UTILITIES*/
/*This flips a given image in the x axis (like in mirror)*/
.flip-x {
    transform: scaleX(-1);
}

.margin-top--l {
    margin-top: 3em;
}

.margin-bottom--l {
    margin-bottom: 3em;
}

.margin-top--s {
    margin-top: 0.5em;
}

.margin-bottom--s {
    margin-bottom: 0.5em;
}

.section-padding--top {
    padding-top: 9em;
}

.section-padding--bottom {
    padding-bottom: 9em;
}

.fix-bottom {
    position: fixed;
    bottom: 0;
    left: 0;
    z-index: 1;
}

.hide {
    display: none;
}

/*The bottom divider for the contact section doesnt go all the way down, so we need to set a
negative margin*/
.divider-bottom {
    margin-bottom: -2px;
}


/* UTILITY CLASSES FOR USE WITH GRID
actually only this one together with the styles for the grid cards and their container/wrapper*/
.grid {
    display: grid;
}

/*LOCAL STYLES FOR ELEMENTS WHICH NEED CUSTOM STYLING*/

/*Styles for the header*/
.headerbar {
    background-color: var(--color-light);
    width: 100vw;
    height: 6vh;
    padding-top: 1.5em;
    padding-bottom: 1.5em;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1;
    box-shadow: 0 5px 10px var(--color-shadow);
}
/* ... */

